[package]
name = "chksum-core"
version = "0.0.0"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.70.0"
description = "Core traits and functions for straightforward hash computation of bytes, files, directories and more."
readme = ".cargo/README.md"
repository = "https://github.com/chksum-rs/core"
license = "MIT"
keywords = ["checksum", "digest", "hash"]
categories = ["algorithms", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-hash-core = "0.0.0"
thiserror = "1.0.51"
